vlib/v/checker/tests/like_operator_outside_orm_error.out
vlib/v/checker/tests/like_operator_outside_orm_error.vv:4:15: error: unexpected name `like`, expecting `,`
    2 |     name := 'Luke'
    3 | 
    4 |     println(name like 'L%')
      |                  ~~~~
    5 | }
